# win-wasapi-capture

source/: CMakeLists.txt  wasapi-hook-info.h  win-wasapi-capture.cpp  win-wasapi-capture.h
source/wasapi-hook/: CMakeLists.txt  wasapi-hook.cpp
